# jdeduplix

./: ReadMe.md  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.css  App.vue  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  presets.rs  state.rs
src-tauri/src/core/: classifier.rs  engine.rs  mod.rs  semantic.rs  storage.rs  types.rs  vector.rs
src/components/atoms/: Button.vue  Container.vue  Input.vue  Select.vue  Slider.vue  Switch.vue  Text.vue
src/components/molecules/: DedupSettings.vue  Dialog.vue  DuplicateResults.vue  FormField.vue  Header.vue  Menu.vue  TextEditor.vue
src/composables/: useDeduplication.ts
src/types/: dedup.ts
src/types/enums/: index.ts
src/types/schemas/: index.ts
