[package]
name = "jdeduplix"
version = "0.0.0"
description = "A cutting-edge deduplication system that leverages artificial intelligence and decentralized technologies"
authors = ["you"]
edition = "2021"

[lib]
name = "jdeduplix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = { version = "2.0.0-alpha.2" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
levenshtein = "1.0.5"  # Levenshtein distance calculation

# Error Handling
thiserror = "2.0.11"                             # Error handling
anyhow = "1.0.79"                                # Error propagation

# Cryptography & Hashing
sha2 = "0.10.8"                                  # SHA2 hashing
blake3 = "1.5.0"                                 # BLAKE3 hashing

# Utilities
uuid = { version = "1.6.1", features = ["v4"] }  # Unique identifiers
unicode-normalization = "0.1.22"                 # Unicode normalization
hex = "0.4.3"                                    # Hex encoding/decoding
