[package]
name = "jdeduplix"
version = "0.0.0"
description = "A cutting-edge deduplication system that leverages artificial intelligence and decentralized technologies"
authors = ["you"]
edition = "2021"

[lib]
name = "jdeduplix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = { version = "2.0.0-alpha.2" }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
levenshtein = "1.0.5"  # Levenshtein distance calculation
dirs = "5.0"
# Error Handling
thiserror = "2.0.11"                             # Error handling
anyhow = "1.0.79"                                # Error propagation

# Cryptography & Hashing
sha2 = "0.10.8"                                  # SHA2 hashing
blake3 = "1.5.0"                                 # BLAKE3 hashing

# Text Processing
strsim = "0.10.0"                                # Additional string similarity metrics
unicode-segmentation = "1.10.1"                  # Better text segmentation
rust-stemmers = "1.2.0"                          # Word stemming for better matching
unicode-normalization = "0.1.22"                 # Unicode normalization
symbolic_expressions = "5.0.3"                   # Advanced pattern matching
smartstring = "1.0.1"                            # Memory-efficient string handling
fst = "0.4"                                      # Fast fuzzy string matching
whatlang = "0.16"                                # Language detection
fingerprint = "0.0.3"                            # Text fingerprinting
hashbrown = "0.14"                               # High performance hashmap
rust-tfidf = "1.1.1"                             # TF-IDF calculations
simsearch = "0.2.4"
ureq = { version = "2.9.1", features = ["tls"] } # HTTP client for downloading models
hex = "0.4.3"                                    # Hex encoding/decoding
rayon = "1.8.0"                                  # Parallel processing

# Performance & Concurrency
dashmap = "5.5.3"                                # Thread-safe concurrent HashMap
lru = "0.12.1"                                   # LRU cache
memmap2 = "0.9.0"                                # Memory mapping for large files

# Utilities
uuid = { version = "1.6.1", features = ["v4"] }  # Unique identifiers

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
